--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,3 @@
 [theme]
-primaryColor="#F63366"
-backgroundColor="#CACFD2"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
-font="sans serif"
+base="light"
+font="helvetica"
